# devops-pipeline

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.pocsandbox  Dockerfile.vllm  README.md  docker-compose.dev.yml  docker-compose.registry.yml  docker-compose.yml  pyproject.toml  test_telegram.py
.claude/: settings.json
.claude/agents/: code-reviewer.md  infra-ops.md  planner.md
.claude/rules/: boundaries.md  git-workflow.md  security.md
.github/: dependabot.yml
.github/workflows/: blog.yml  ci.yml  deploy.yml  eval.yml
app/: clock.py  commands.py  config.py  main.py  notifier.py  notify_http.py  notion_client.py  pipeline.py  tools.py  worker.py
app/agent/: graph.py  outcome.py  runtime.py  sdk_tools.py  tools.py
app/bot/: notifier.py  server.py
app/bot/commands/: __init__.py  (+6 more)
app/notion/: client.py  markdown.py
app/pipeline/: poc_eval.py  poc_pipeline.py  runner.py  security_audit.py
app/pocsandbox/: __init__.py  checks.py  server.py
app/rag/: __init__.py  moc.py  retriever.py  vault_index.py
app/tools/: __init__.py  filesystem.py  notion.py  obsidian.py  research.py  shell.py
app/worker/: agent.py  digest.py  git_ops.py  metrics.py  publish_ops.py  selfcheck.py  server.py  store.py
cli/: notify.py
docs/: monitoring-setup.md
evals/: __init__.py  __main__.py  checks.py  harness.py  judge.py  llm_io.py  report.py  stubs.py  trace.py
evals/scenarios/: code_none_deref.json  doc_entrypoint.json  general_freeform_routing.json  infra_compose_security.json  poc_scaffold.json  stack_vectordb_trend.json
k8s/: configmap.yaml  create-secrets.sh  namespace.yaml  networkpolicy.yaml
k8s/bot/: deployment.yaml  service.yaml
k8s/monitoring/: grafana.yaml  prometheus.yaml
k8s/vllm/: deployment.yaml  pvc.yaml  service.yaml
k8s/worker/: deployment.yaml  pvc.yaml  service.yaml
monitoring/: prometheus.yml
prompts/: 00_README.md  01_analyze.md  02_research.md  03_design.md  04_implement.md  05_review.md  06_test.md
scripts/: publish_vault.py  smoke_selfcheck.py
site/: README.md  quartz.config.ts  quartz.layout.ts
site/content/: index.md
site/styles/: custom.scss
tests/: conftest.py
tests/eval/: test_routing.py
tests/unit/: test_agent_hardening.py  test_bot_server.py  test_callback_auth.py  test_clock.py  test_dashboards.py  test_digest.py  test_git_ops.py  test_llm_backend.py  test_metrics.py  test_moc.py  test_notes_cmd.py  test_notify.py  test_notion_client.py  test_obsidian.py  test_outcome.py  test_poc_eval.py  test_poc_pipeline.py  test_pocsandbox_checks.py  test_pocsandbox_server.py  test_publish_ops.py  test_publish_vault.py  test_research.py  test_runtime.py  test_security_audit.py  test_selfcheck.py  test_task_memory.py  test_tools.py  test_vault_index.py  test_worker_server.py
tools/: notify.py
vault/: README.md
(+24 files in other folders)
