[project]
name = "ocr"
version = "0.1.0"
description = "Telegram 승인 기반 자동화 파이프라인"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.102.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "psutil>=6.0.0",
    "aiohttp>=3.14.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.3.0",
    "prometheus-client>=0.25.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.22.1",
]

[project.scripts]
start = "app.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.0",
    "pip-audit>=2.7.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".venv",
    "build",
    "dist",
    "logs",
    "vendor",  # 외부 last30days 스킬 스크립트 — 린트/포맷 대상 제외
]

[tool.ruff.lint]
# 균형 잡힌 2026 기본값: pycodestyle(E) + pyflakes(F) + isort(I) + bugbear(B)
# + pyupgrade(UP) + simplify(SIM)
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
    "E501",  # line-too-long — formatter 가 처리
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # assert False 허용 (테스트에서 의도적 실패용)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
