[project]
name = "devops-pipeline"
version = "0.1.0"
description = "Telegram 승인 기반 자동화 파이프라인"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.2",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "psutil>=6.0.0",
    "aiohttp>=3.14.1",
    "prometheus-client>=0.25.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.22.1",
    "qdrant-client[fastembed]>=1.18.0",
    "openai>=2.41.1",
]

[project.scripts]
start = "app.main:main"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.17",
    "pip-audit>=2.10.1",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".venv",
    "build",
    "dist",
    "logs",
    "vendor",  # 외부 last30days 스킬 스크립트 — 린트/포맷 대상 제외
]

[tool.ruff.format]
# 줄바꿈을 LF 로 고정 — .gitattributes(eol=lf)와 일치. auto 의 플랫폼별 비결정성 제거.
line-ending = "lf"

[tool.ruff.lint]
# 균형 잡힌 2026 기본값: pycodestyle(E) + pyflakes(F) + isort(I) + bugbear(B)
# + pyupgrade(UP) + simplify(SIM)
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
    "E501",  # line-too-long — formatter 가 처리
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # assert False 허용 (테스트에서 의도적 실패용)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
